# Bubble-Visit

./: README.md  pyproject.toml
bubble_visit/: bounds.py  configuration.py  database.py  gui.py  journals.py  visited_stars_cache.py
bubble_visit/components/: coordinates.py  main_window.py  settings.py  system_counts.py
